<resources>
    <string name="app_name">Diet Tracker</string>
    <string name="facebook_app_id">572271067343034</string>
    <string name="fb_login_protocol_scheme">fb572271067343034</string>

    <string name="timer_message">The timer has expired</string>
    <string name="calories">cals</string>

    <string name="calculate">Calculate</string>
    <string name="goal">Set goal</string>
    <string name="log_weight">Log Weight</string>
    <string name="refresh">Refresh</string>

    <string name="meal_1">"Meal 1"</string>
    <string name="meal_2">"Meal 2"</string>
    <string name="meal_3">"Meal 3"</string>
    <string name="exercise_burnt_calories">"Exercise burnt calories"</string>

    <string name="age">Age</string>
    <string name="weight">Weight in Kg</string>
    <string name="height">Height in Cm</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>

    <string name="no_account_message">Create a new account</string>
    <string name="signup">Register</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign out</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="signin_anonymous">Anonymous</string>
</resources>