<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <com.diet.tracker.ui.custom.YoutubeVideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:useWebUi="true" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/videoView"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="12dp"
            android:checkedButton="@+id/radio_button_1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdoMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rdoFemale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:gravity="center"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:hint="@string/age">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputAge"
            android:layout_marginVertical="12dp"
            android:hint="@string/weight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputWeight"
            android:hint="@string/height">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnSetGoal"
            android:layout_toStartOf="@id/tvResult"
            android:text="@string/calculate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvResult"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnCalculate"
            android:layout_alignBottom="@id/btnCalculate"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            tools:text="Result: 1450" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnRefresh"
            android:layout_toStartOf="@id/tvGoal"
            android:text="@string/goal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGoal"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnSetGoal"
            android:layout_alignBottom="@id/btnSetGoal"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            tools:text="Goal: 1500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/refresh" />
    </RelativeLayout>
</layout>